# sql-reader

./: .gitignore  README.md  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
resources/: cfg.json
sql_reader/: __init__.py  sql_reader.py
sql_to_influx/: __init__.py  database_synchronizer.py  influx_client.py  sql_client.py  sql_to_influx.py
tests/: requirements_tests.txt  test_something.py
