[metadata]
name = sql_to_influx
version = 0.0.1
author = "Michal Wilczek"
author_email = "mich.wilcz@gmail.com    "
description = "Package translating an SQL database to Influx database written in Python."
long_description = file: README.dm
url = "https://github.com/MichalWilczek/sql-to-influx.git"
keywords = sql, influx
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = False
package_dir = 
packages = find:
install_requires =
    sqlalchemy
    influxdb
    pandas; python_version == "3.7"

[options.entry_points]
console_scripts =
    template = template.main:main

[options.packages.find]
exclude = tests

[options.extras_require]
test =
    pytest