[metadata]
name = sql_reader
version = 0.0.1
author = "Michal Wilczek"
author_email = "mich.wilcz@gmail.com    "
description = "Package reading an SQL database to Python."
long_description = file: README.dm
url = "https://github.com/MichalWilczek/sql-reader.git"
keywords = sql
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = False
package_dir = 
packages = find:
install_requires =
    sqlalchemy
    pandas; python_version == "3.7"

[options.packages.find]
exclude = tests

[options.extras_require]
test =
    pytest